--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ article {
     padding: 15px;
     justify-content: center;
   }
+
   .footer {
     align-self: end;
   }
@@ -197,5 +198,35 @@ article {
   }
   .ico img {
     margin: 0 5px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  article {
+    height: 80%;
+    width: 85%;
+  }
+  .details {
+    padding: 10px;
+  }
+}
+@media screen and (max-width: 375px) {
+  article {
+    height: 90%;
+    width: 90%;
+  }
+  .details {
+    padding: 10px;
+  }
+  .details h3 {
+    font-size: 18px;
+  }
+  .details p {
+    font-size: 13px;
+  }
+}
+@media screen and (min-height: 750px) and (max-width: 400px) {
+  article {
+    height: 70%;
   }
 }
