--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ article {
   height: 100%;
   border-radius: 50%;
   grid-area: img;
-  width: 100%;
+  width: 100%;object-fit:cover;
 }
 .profile h4 {
   grid-area: head;
@@ -217,7 +217,9 @@ article {
     width: 85%;
   }
   .details {
-    padding: 10px;
+    padding: 20px;
+    gap: 1em;
+}
   }
 }
 @media screen and (max-width: 375px) {
